--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,9 @@ img,
 .footer-container,
 .list-social-footer,
 .icon-footer-link,
-.button-modal {
+.button-modal,
+.footer-form,
+.footer-button {
   display: flex;
 }
 
@@ -107,7 +109,9 @@ img,
 .main-features .icon-features,
 .customers-link,
 .icon-team-link,
-.icon-footer-link {
+.icon-footer-link,
+.footer-button,
+.button-modal {
   align-items: center;
 }
 
@@ -206,8 +210,8 @@ img,
 
 .hero-button:hover,
 .hero-button:focus {
-  color: var(--white-background, #FFF);
-  background: var(--pressed-state, #404BBF);
+  color: var(--white-background, #fff);
+  background: var(--pressed-state, #404bbf);
 }
 
 .current::after {
@@ -495,7 +499,9 @@ img,
 .customers-link,
 .icon-team-link,
 .icon-footer-link,
-.main-features .icon-features {
+.main-features .icon-features,
+.footer-button,
+.button-modal {
   justify-content: center;
 }
 
@@ -545,6 +551,48 @@ img,
   border-top: none;
 }
 
+.footer-form {
+  gap: 24px;
+}
+
+.footer-form-input {
+  width: 264px;
+  height: 40px;
+  border: 1px solid var(--white-background, #ffffff);
+  background-color: transparent;
+  font-size: 12xp;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  color: var(--white-background, #ffffff);
+}
+
+.footer-form-input::placeholder {
+  color: var(--white-background, #ffffff);
+}
+
+.footer-button {
+  min-width: 165px;
+  height: 40px; 
+  font-family: var(--primary-font);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--white-background, #ffffff);
+  cursor: pointer;
+  background-color: var(--primary-Brand, #4D5AE5);
+  border: none;
+  border-radius: 4px;
+}
+
+.footer-button-svg {
+  margin-left: 16px;
+  fill: var(--light, #f4f4fd);
+}
+
 .data-modal {
   position: fixed;
   top: 0;
@@ -582,10 +630,7 @@ img,
   right: 24px;
   width: 24px;
   height: 24px;
-
   border-radius: 50%;
-  align-items: center;
-  justify-content: center;
   background-color: var(--accent, #e7e9fc);
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
