--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,10 @@ ul {
 }
 
 img,
-.portfolio-project-link {
+.portfolio-project-link,
+.modal-forms-label,
+.hero-button,
+.current::after {
   display: block;
 }
 
@@ -216,7 +219,6 @@ img,
 
 .current::after {
   content: "";
-  display: block;
   width: 100%;
   height: 4px;
   background-color: var(--pressed-state, #404bbf);
@@ -304,7 +306,6 @@ img,
 }
 
 .hero-button {
-  display: block;
   min-width: 169px;
   height: 56px;
   border: none;
@@ -561,7 +562,7 @@ img,
   
   border: 1px solid var(--white-background, #ffffff);
   background-color: transparent;
-  font-size: 12xp;
+  font-size: 12px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   padding-left: 16px;
@@ -572,7 +573,6 @@ img,
 
 .footer-form-input::placeholder {
   color: var(--white-background, #ffffff);
-  font-size: 12xp;
 }
 
 .footer-button {
@@ -636,6 +636,49 @@ img,
   letter-spacing: 0.02em;
   color: var(--dark, #2E2F42);
   margin-bottom: 16px;
+}
+
+.modal-forms {
+  margin-bottom: 8px;
+}
+
+.modal-forms-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--subtle-Text, #8e8f99);
+  margin-bottom: 4px;
+}
+
+.modal-forms-input {
+  position: relative;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding-left: 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus {
+  border-color: #4D5AE5;
+}
+
+.modal-forms-icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-forms-icon:focus {
+  fill: #4D5AE5;
 }
 
 .button-modal {
