--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,8 @@ img,
 .icon-team-link,
 .icon-footer-link,
 .footer-button,
-.button-modal {
+.button-modal,
+.modal-forms-span {
   align-items: center;
 }
 
@@ -502,7 +503,8 @@ img,
 .icon-footer-link,
 .main-features .icon-features,
 .footer-button,
-.button-modal {
+.button-modal,
+.modal-forms-span {
   justify-content: center;
 }
 
@@ -559,7 +561,7 @@ img,
 .footer-form-input {
   width: 264px;
   height: 40px;
-  
+
   border: 1px solid var(--white-background, #ffffff);
   background-color: transparent;
   font-size: 12px;
@@ -634,7 +636,7 @@ img,
   line-height: 1.5;
   text-align: center;
   letter-spacing: 0.02em;
-  color: var(--dark, #2E2F42);
+  color: var(--dark, #2e2f42);
   margin-bottom: 16px;
 }
 
@@ -642,11 +644,15 @@ img,
   margin-bottom: 8px;
 }
 
-.modal-forms-label {
+.modal-forms-label,
+.modal-forms-label-check {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: var(--subtle-Text, #8e8f99);
+}
+
+.modal-forms-label {
   margin-bottom: 4px;
 }
 
@@ -666,7 +672,7 @@ img,
 }
 
 .modal-input:focus {
-  border-color: #4D5AE5;
+  border-color: #4d5ae5;
 }
 
 .modal-forms-icon {
@@ -678,7 +684,39 @@ img,
 }
 
 .modal-forms-icon:focus {
-  fill: #4D5AE5;
+  fill: #4d5ae5;
+}
+
+.modal-forms-textarea {
+  width: 100%;
+  height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-forms-checkbox {
+  margin-bottom: 24px;
+}
+
+.modal-forms-span {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  fill: transparent;
 }
 
 .button-modal {
