--- a/css/styles.css
+++ b/css/styles.css
@@ -641,7 +641,7 @@ img,
 }
 
 .modal-forms {
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 
 .modal-forms-label,
@@ -654,7 +654,6 @@ img,
 
 .modal-forms-label {
   margin-bottom: 4px;
-  background-color: #31d0aa;
 }
 
 .modal-forms-input {
@@ -672,7 +671,8 @@ img,
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:focus {
+.modal-input:focus,
+.modal-forms-textarea:focus {
   border-color: #4d5ae5;
 }
 
@@ -709,6 +709,7 @@ img,
 }
 
 .modal-forms-span {
+  /* display: inline-flex; */
   width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -716,8 +717,13 @@ img,
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: inline-flex;
   fill: transparent;
+}
+
+input:checked + .modal-forms-span {
+  background-color: var(--pressed-state, #404bbf);
+  border: none;
+  fill: var(--pressed-state, #404bbf);
 }
 
 .button-modal {
