--- a/css/styles.css
+++ b/css/styles.css
@@ -660,6 +660,10 @@ img,
   position: relative;
 }
 
+.modal-forms-textarea {
+  margin-bottom: 16px;
+}
+
 .modal-input {
   width: 100%;
   height: 40px;
@@ -672,8 +676,8 @@ img,
 }
 
 .modal-input:focus,
-.modal-forms-textarea:focus {
-  border-color: #4d5ae5;
+.modal-forms-text:focus {
+  border-color: var(--primary-Brand, #4d5ae5);
 }
 
 .modal-forms-icon {
@@ -688,7 +692,7 @@ img,
   fill: #4d5ae5;
 }
 
-.modal-forms-textarea {
+.modal-forms-text {
   width: 100%;
   height: 120px;
   font-size: 12px;
@@ -709,7 +713,7 @@ img,
 }
 
 .modal-forms-span {
-  /* display: inline-flex; */
+  display: inline-flex;
   width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -720,10 +724,14 @@ img,
   fill: transparent;
 }
 
-input:checked + .modal-forms-span {
+input:checked ~ .modal-forms-span {
   background-color: var(--pressed-state, #404bbf);
   border: none;
   fill: var(--pressed-state, #404bbf);
+}
+
+.modal-input:focus ~ .modal-forms-icon {
+  fill: var(--primary-Brand, #4D5AE5)
 }
 
 .button-modal {
