--- a/css/styles.css
+++ b/css/styles.css
@@ -53,8 +53,25 @@ img,
 .portfolio-project-link,
 .modal-forms-label,
 .hero-button,
-.current::after {
+.current::after,
+.button-modal-send {
   display: block;
+}
+
+.button-modal-send {
+  min-width: 169px;
+  height: 56px;
+  font-family: var(--primary-font);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--white-background, #ffffff);
+  cursor: pointer;
+  background-color: var(--primary-Brand, #4D5AE5);
+  border: none;
+  border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-project-link {
@@ -730,10 +747,9 @@ img,
   fill: var(--pressed-state, #404bbf);
 }
 
-/* .input-checkbox:checked {
-  outline: 2px solid #2196f3;
-  outline-offset: 2px;
-} */
+.modal-forms-span-link {
+  color: var(--primary-Brand, #4d5ae5);
+}
 
 .modal-input:focus ~ .modal-forms-icon {
   fill: var(--primary-Brand, #4D5AE5)
