--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,8 @@ img,
   border: none;
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin: 24px auto;
+  padding: 16px 32px;
 }
 
 .portfolio-project-link {
