--- a/css/styles.css
+++ b/css/styles.css
@@ -711,6 +711,10 @@ img,
   fill: #4d5ae5;
 }
 
+.modal-input:focus ~ .modal-forms-icon {
+  fill: var(--primary-Brand, #4D5AE5)
+}
+
 .modal-forms-text {
   width: 100%;
   height: 120px;
@@ -743,19 +747,18 @@ img,
   fill: transparent;
 }
 
-.input-checkbox:checked {
+/* .input-checkbox:checked {
   background-color: var(--pressed-state, #404bbf);
   border: none;
   fill: var(--pressed-state, #404bbf);
-}
+} */
+
 
 .modal-forms-span-link {
   color: var(--primary-Brand, #4d5ae5);
 }
 
-.modal-input:focus ~ .modal-forms-icon {
-  fill: var(--primary-Brand, #4D5AE5)
-}
+
 
 .button-modal {
   position: absolute;
