--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ img,
   letter-spacing: 0.04em;
   color: var(--white-background, #ffffff);
   cursor: pointer;
-  background-color: var(--primary-Brand, #4D5AE5);
+  background-color: var(--primary-Brand, #4d5ae5);
   border: none;
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -134,7 +134,8 @@ img,
 .icon-footer-link,
 .footer-button,
 .button-modal,
-.modal-forms-span {
+.modal-forms-span,
+.modal-forms-label-check {
   align-items: center;
 }
 
@@ -523,7 +524,8 @@ img,
 .main-features .icon-features,
 .footer-button,
 .button-modal,
-.modal-forms-span {
+.modal-forms-span,
+.modal-forms-label-check {
   justify-content: center;
 }
 
@@ -534,7 +536,7 @@ img,
 
 .icon-footer-link:hover,
 .icon-footer-link:focus {
-  background-color: #31d0aa;
+  background-color: var(--success, #31d0aa);
 }
 
 .footer-email-paragraf {
@@ -627,12 +629,6 @@ img,
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-} */
-
 .modal-page {
   position: absolute;
   top: 50%;
@@ -663,14 +659,6 @@ img,
   margin-bottom: 8px;
 }
 
-.modal-forms-label,
-.modal-forms-label-check {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-  color: var(--subtle-Text, #8e8f99);
-}
-
 .modal-forms-label {
   margin-bottom: 4px;
 }
@@ -699,22 +687,6 @@ img,
   border-color: var(--primary-Brand, #4d5ae5);
 }
 
-.modal-forms-icon {
-  position: absolute;
-  left: 16px;
-  top: 50%;
-  transform: translateY(-50%);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-forms-icon:focus {
-  fill: #4d5ae5;
-}
-
-.modal-input:focus ~ .modal-forms-icon {
-  fill: var(--primary-Brand, #4D5AE5)
-}
-
 .modal-forms-text {
   width: 100%;
   height: 120px;
@@ -734,31 +706,6 @@ img,
 .modal-forms-checkbox {
   margin-bottom: 24px;
 }
-
-.modal-forms-span {
-  display: inline-flex;
-  width: 16px;
-  height: 16px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 2px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  fill: transparent;
-}
-
-/* .input-checkbox:checked {
-  background-color: var(--pressed-state, #404bbf);
-  border: none;
-  fill: var(--pressed-state, #404bbf);
-} */
-
-
-.modal-forms-span-link {
-  color: var(--primary-Brand, #4d5ae5);
-}
-
-
 
 .button-modal {
   position: absolute;
@@ -788,4 +735,69 @@ img,
   width: 24px;
   height: 24px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-forms-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--subtle-Text, #8e8f99);
+}
+
+.modal-forms-label-check {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--subtle-Text, #8e8f99);
+  display: inline-flex;
+}
+
+.modal-forms-span {
+  display: inline-flex;
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: transparent;
+  margin-right: 8px;
+}
+
+.input-checkbox:checked + .modal-forms-label-check .modal-forms-span {
+  background-color: var(--pressed-state, #404bbf);
+  border: none;
+  fill: var(--light, #f4f4fd);
+}
+
+/* .modal-forms-span-icon {
+  fill: transparent;
+} */
+
+.modal-forms-span-link {
+  color: var(--primary-Brand, #4d5ae5);
+  text-decoration: underline;
+}
+
+.modal-forms-icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-forms-icon:focus {
+  fill: #4d5ae5;
+}
+
+.modal-input:focus ~ .modal-forms-icon {
+  fill: var(--primary-Brand, #4d5ae5);
+}
+
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
 }
