--- a/css/styles.css
+++ b/css/styles.css
@@ -753,7 +753,6 @@ img,
 }
 
 .modal-forms-span {
-  display: inline-flex;
   width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -761,6 +760,7 @@ img,
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
   fill: transparent;
   margin-right: 8px;
 }
@@ -796,8 +796,8 @@ img,
   fill: var(--primary-Brand, #4d5ae5);
 }
 
-/* .is-hidden {
+.is-hidden {
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
-} */
+}
