--- a/css/styles.css
+++ b/css/styles.css
@@ -745,7 +745,7 @@ img,
 }
 
 .modal-forms-label-check {
-  display: inline-flex;
+  /* display: inline-flex; */
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
