--- a/css/styles.css
+++ b/css/styles.css
@@ -559,7 +559,8 @@ img,
 .name-team,
 .name-card {
   padding: 32px 0;
-  background-color: var(--light, #f4f4fd);
+  background-color: var(--white-background, #ffffff);
+  
 }
 
 .name-card {
@@ -693,7 +694,7 @@ img,
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  color: rgba(46, 47, 66, 0.4);
+
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   background-color: transparent;
@@ -701,6 +702,10 @@ img,
   outline: transparent;
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-forms-text::placeholder {
+  color: rgba(46, 47, 66, 0.4);
 }
 
 .modal-forms-checkbox {
